--- a/scenes/master_bedroom.yaml
+++ b/scenes/master_bedroom.yaml
@@ -3,9 +3,9 @@
     light.right_bed_lamp:
       state: on
       transition: 2
-      brightness: 50
+      brightness: 30
       xy_color: [ 0.4448, 0.4066 ]
-    light.master_bedroom_fan_lights_level_6_0:
+    light.master_bedroom_ceiling:
       state: on
       brightness: 50
 
