--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,6 +7,9 @@ homeassistant:
   unit_system: imperial
   time_zone: America/New_York
   customize:
+    switch.ge_12722_onoff_relay_switch_switch_4_0:
+      friendly_name: Front Porch
+      icon: mdi:spotlight
     switch.garage_spotlight_switch_19_0:
       friendly_name: Garage Spotlight
       icon: mdi:spotlight
@@ -15,6 +18,10 @@ homeassistant:
       icon: mdi:lamp
     light.linear_wd500z1_wall_dimmer_switch_level_6_0:
       friendly_name: Master Bedroom
+    sensor.main_garage_door_time_in_state:
+      icon: mdi:timer-sand
+    sensor.main_garage_door_wifi_signal_strength:
+      icon: mdi:wifi
 
 notify:
   - name: notify
@@ -22,8 +29,12 @@ notify:
     api_key: !secret pushbullet_key
 
 cover:
-  platform: zwave
-
+  platform: garadget
+  covers:
+    1e003f001751353432393433:
+      username:  jaradd@gmail.com
+      password:  !secret garadget_password
+      name:  Main Garage Door
 frontend:
   panel_iframe:
     router:
@@ -31,21 +42,22 @@ frontend:
       url: 'http://192.168.1.1'
 
 http:
-#  api_password: !secret http_password
-#  base_url: !secret base_url
-#  login_attempts_threshold: 10
-#  trusted_networks:
-#    - 192.168.0.0/24
-#    - 127.0.0.1
-#    - ::1
-#  ip_ban_enabled: true
-#  cors_allowed_origins:
-#    - https://google.com
-#    - https://home-assistant.io
-#    - https://ifttt.com
-#    - http://google.com
-#    - http://192.168.1.219
-#    - https://192.168.1.219
+  api_password: !secret http_password
+  base_url: !secret base_url
+  login_attempts_threshold: 10
+  trusted_networks:
+    - 108.29.223.246
+    - 192.168.1.0/24
+    - 127.0.0.1
+    - ::1
+  ip_ban_enabled: true
+  cors_allowed_origins:
+    - https://google.com
+    - https://home-assistant.io
+    - https://ifttt.com
+    - http://google.com
+    - http://192.168.1.219
+    - https://192.168.1.219
 
 updater:
 discovery:
