Fixed usb zwave port. Turned off outside spotlight automation

--- a/automation/lights.yaml
+++ b/automation/lights.yaml
@@ -31,8 +31,8 @@
     minutes: 10
     seconds: 0
   action:
-    - service: switch.turn_on
-      entity_id: switch.garage_spotlight_switch_19_0
+#    - service: switch.turn_on
+#      entity_id: switch.garage_spotlight_switch_19_0
     - service: switch.turn_on
       entity_id: switch.foyer_lamp_switch_9_0
 
@@ -41,7 +41,7 @@
     platform: sun
     event: sunrise
   action:
-    - service: switch.turn_off
-      entity_id: switch.garage_spotlight_switch_19_0
+ #   - service: switch.turn_off
+ #     entity_id: switch.garage_spotlight_switch_19_0
     - service: switch.turn_off
       entity_id: switch.foyer_lamp_switch_9_0
